<resources>
    <string name="app_name" translatable="false">OrganizeIt</string>
    <string name="add_button">Add-Button</string>
    <string name="headline_shelves">Regale</string>
    <string name="add_item">Gegenstand hinzufügen</string>
    <string name="edit_item">Gegenstand bearbeiten</string>
    <string name="add_shelf">Regal hinzufügen</string>
    <string name="add_drawer">Lade Hinzufügen</string>
    <string name="drawer_name">Name der Lade</string>
    <string name="delete_shelf">Regal Löschen</string>
    <string name="delete_item">Gegenstand Löschen</string>
    <string name="decrease_quantity">Menge reduzieren</string>
    <string name="increase_quantity">Menge erhöhen</string>
    <string name="name">Name</string>
    <string name="shelf_room">Raum</string>
    <string name="item_description">Beschreibung</string>
    <string name="item_quantity">Menge</string>
    <string name="cancelBtn">Abbrechen</string>
    <string name="saveBtn">Speichern</string>
    <string name="noDescriptionAvailable">Keine Beschreibung vorhanden</string>
    <string name="description">Beschreibung:</string>
    <string name="item_name">Item Name</string>
    <string name="email">E-Mail</string>
    <string name="password">Passwort</string>
    <string name="repeat_password">Passwort erneut eingeben</string>
    <string name="register">Registrieren</string>
    <string name="login">Anmelden</string>
    <string name="first_name">Vorname</string>
    <string name="last_name">Nachname</string>
    <string name="password_requirements">
        Passwort Requirements:\n Länge: 8 \n min 1. Großbuchstabe \n min 1. Sonderzeichen
    </string>
    <string name="delete_drawer">Lade Löschen</string>
    <string name="move_item">Gegenstand verschieben</string>
    <string name="headline_select_drawer">Wähle eine Lade aus</string>
    <string name="left_arrow">Pfeil_links</string>
    <string name="more_options">Mehr Optionen</string>
    <string name="edit">Bearbeiten</string>
    <string name="move">Verschieben</string>
    <string name="delete">Löschen</string>
    <string name="drawer">Lade</string>
    <string name="add_list">Liste hinzufügen</string>
    <string name="add_shelf_list">Liste hinzufügen</string>
    <string name="navigation_drawer_open">Menü öffnen</string>
    <string name="navigation_drawer_close">Menü schließen</string>
    <string name="share">Teilen</string>
    <string name="deleteList">Liste löschen</string>
    <string name="share_text">"ID der Liste: "</string>
    <string name="import_list">Liste importieren</string>
    <string name="listName">Name der Liste</string>
    <string name="listId">ID der Liste</string>
    <string name="importBtn">Importieren</string>
</resources>