<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextItemName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/editTextItemDesc"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/item_description" />

    <EditText
        android:id="@+id/editTextItemQuantity"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/item_quantity"
        android:inputType="number|numberDecimal" />

    <Button
        android:id="@+id/moveItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/move_item" />

</LinearLayout>
