<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/itemName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Item Name"
            android:textSize="16sp"
            android:padding="8dp" />

        <!--<Button
            android:id="@+id/decreaseQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-" />-->
        <ImageButton
            android:id="@+id/decreaseQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_arrow_left"
            android:contentDescription="@string/decrease_quantity"/>

        <TextView
            android:id="@+id/itemQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:padding="8dp" />

        <!--<Button
            android:id="@+id/increaseQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+" />-->
        <ImageButton
            android:id="@+id/increaseQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_arrow_right"
            android:contentDescription="@string/increase_quantity"/>

        <ImageButton
            android:id="@+id/deleteItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/delete_item"
            app:tint="@android:color/holo_red_dark" />
        <!--<Button
            android:id="@+id/deleteItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete" />-->

    </LinearLayout>

    <TextView
        android:id="@+id/itemDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Item Description"
        android:visibility="gone"
        android:padding="8dp" />

</LinearLayout>
